# mb-music-metadata

./: LICENSE  README.md  pyproject.toml
excel/: catalog.txt  海淘复盘.xlsx  海淘复盘_未命中报告.csv
mb_music_metadata.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mb_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vgmmb/: cli.py  db.py  excel_sync.py  io.py  log.py  normalizer.py  queries.py  schema.py
vgmmb/data/: catalog.txt  format_mapping.json
vgmmb/data/schemas/: mb-album-v1.json
