[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mb-music-metadata"
version = "0.1.1"
description = "Minimal MB-only catalog pipeline: lookup by catalog number and emit normalized JSON, with Excel sync support"
requires-python = ">=3.9"
dependencies = [
  "psycopg2-binary>=2.9.9",
  "jsonschema>=4.22.0",
  "pandas>=2.0.0",       # Excel I/O
  "openpyxl>=3.1.0",     # Excel engine
]

[project.scripts]
mb-lookup = "vgmmb.cli:main"
mb-sync-excel = "vgmmb.excel_sync:main"   # 新增：Excel 写回入口

[tool.setuptools.packages.find]
include = ["vgmmb"]

[tool.ruff]
line-length = 100

[tool.setuptools.package-data]
vgmmb = ["data/*", "data/schemas/*"]
